--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>ArjunAssignment</groupId>
-	<artifactId>ArjunAssignment</artifactId>
+	<groupId>Assignment</groupId>
+	<artifactId>Assignment</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>ArjunAssignment</name>
+	<name>Assignment</name>
 	<dependencies>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
